<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab1</string>
    <string name="action_settings">Settings</string>
    
    <!-- string used in Text View  -->
    <string name="nameTextView">Name:</string>
    <string name="emailTextView">Email:</string>
    <string name="phoneTextView">Phone:</string>
    <string name="genderTextView">Gender:</string>
    <string name="maleRadioButton">Male</string>
    <string name="femaleRadioButton">Female</string>
    <string name="classTextView">Class:</string>
    <string name="majorTextView">Major:</string>
    
    <!-- Name for Buttons -->
    <string name="saveButton">Save</string>
    <string name="cancelButton">Cancel</string>
    
    <!-- Hints for different edit text -->
    <string name="nameHint">Your Name Here</string>
    <string name="emailHint">Enter your Email</string>
    <string name="phoneHint">Enter your Phone no.</string>
    <string name="majorHint">Your Major Here</string>
    
    <string name="cancel">Do you want to Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- string array for candidate Names -->
    <string-array name="candidate">
        <item>Sandeep</item>
        <item>vaibhav</item>
        <item>Sudha</item>
        <item>Anurag</item>
        <item>Parth</item>
        <item>Udit</item>
        <item>Sahil</item>
        <item>Shivangi</item>
        <item>Divya</item>
        <item>Mayur</item>
        <item>Shakti</item>        
    </string-array>
   
    <!-- string array for Major Names -->
    <string-array name="major">
        <item>Computer Science</item>
        <item>Electrical Science</item>
        <item>Mechanical Engineering</item>
        <item>Electrical Engineering</item>
        <item>Civil Engineering</item>
        <item>Biotechnology</item>
    </string-array>
    
    <!-- Years -->
    <string-array name="year">
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>    
    </string-array>
</resources>
